Fix title and checkmark overlap - #9
Closes #9

--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ img.poster {
 	margin-right: auto;
 	text-align:   center;
 }
+.checkmark + a {
+    padding-left:  20px;
+    padding-right: 20px;
+}
 .container {text-align: center;}
 .film {
 	background-color: gainsboro;
